--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -6,6 +6,103 @@
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
+
+        <item name="android:textViewStyle">@style/smallFont</item>
+
+        <item name="android:buttonStyle">@style/buttonSmall</item>
     </style>
+
+    <style name="AppTheme.NoActionBar">
+        <item name="windowActionBar">false</item>
+        <item name="windowNoTitle">true</item>
+    </style>
+
+    <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
+
+    <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
+
+    <!-- Tab Layout-->
+    <style name="Base.Widget.Design.TabLayout" parent="android:Widget">
+        <item name="tabBackground">@drawable/tab_item_selector</item>
+        <item name="tabTextAppearance">@style/CustomTextAppearance</item>
+    </style>
+
+    <style name="CustomTextAppearance" parent="TextAppearance.Design.Tab">
+        <item name="textAllCaps">false</item>
+        <item name="android:textAllCaps">false</item>
+    </style>
+
+    <!-- Image Button-->
+    <style name="transparent_image" parent="android:Widget.ImageButton">
+        <item name="android:background">@android:color/transparent</item>
+    </style>
+
+    <!-- Text View -->
+    <style name="verySmallFont" parent="android:Widget.TextView">
+        <item name="android:textSize">@dimen/very_small_font</item>
+    </style>
+
+    <style name="verySmallFont.colorPrimary" parent="@style/verySmallFont">
+        <item name="android:textColor">@color/colorPrimary</item>
+    </style>
+
+    <style name="smallFont" parent="android:Widget.TextView">
+        <item name="android:textSize">@dimen/small_font</item>
+    </style>
+
+    <style name="smallFont.colorPrimary" parent="@style/smallFont">
+        <item name="android:textColor">@color/colorPrimary</item>
+    </style>
+
+    <style name="smallFont.white" parent="@style/smallFont">
+        <item name="android:textColor">@android:color/white</item>
+    </style>
+
+    <style name="smallFont.colorPrimary.shadow" parent="@style/smallFont.colorPrimary">
+        <item name="android:shadowColor">@color/colorPrimary</item>
+        <item name="android:shadowDx">1</item>
+        <item name="android:shadowDy">1</item>
+        <item name="android:shadowRadius">2</item>
+    </style>
+
+    <style name="regularFont" parent="android:Widget.TextView">
+        <item name="android:textSize">@dimen/regular_font</item>
+    </style>
+
+    <style name="regularFont.white" parent="@style/regularFont">
+        <item name="android:textColor">@android:color/white</item>
+    </style>
+
+    <style name="regularFont.Bold" parent="@style/regularFont">
+        <item name="android:textStyle">bold</item>
+    </style>
+
+    <style name="regularFont.black.shadow" parent="@style/regularFont.Bold">
+        <item name="android:shadowColor">@android:color/black</item>
+        <item name="android:shadowDx">1</item>
+        <item name="android:shadowDy">1</item>
+        <item name="android:shadowRadius">2</item>
+    </style>
+
+    <style name="largeFont" parent="android:Widget.TextView">
+        <item name="android:textSize">@dimen/large_font</item>
+    </style>
+
+    <style name="largeFont.white" parent="@style/largeFont">
+        <item name="android:textColor">@android:color/white</item>
+    </style>
+
+    <!-- Button -->
+    <style name="buttonSmall" parent="android:Widget.Button">
+        <item name="android:textColor">@color/white</item>
+        <item name="android:background">@color/colorPrimary</item>
+        <item name="android:textSize">@dimen/small_font</item>
+        <item name="android:paddingLeft">@dimen/double_extra_large_padding</item>
+        <item name="android:paddingRight">@dimen/double_extra_large_padding</item>
+        <item name="android:paddingTop">@dimen/regular_padding</item>
+        <item name="android:paddingBottom">@dimen/regular_padding</item>
+    </style>
+
+
 
 </resources>
