--- a/app/src/main/res/drawable/shape_bar_right.xml
+++ b/app/src/main/res/drawable/shape_bar_right.xml
@@ -3,10 +3,11 @@
     <item>
         <shape>
             <solid android:color="@color/colorPrimary"></solid>
-            <size android:width="@dimen/extra_large_padding" android:height="?attr/actionBarSize"></size>
+            <size android:width="@dimen/double_extra_large_padding" android:height="?attr/actionBarSize"></size>
+            <padding android:right="@dimen/regular_padding"></padding>
         </shape>
     </item>
     <item>
-        <bitmap android:src="@drawable/ic_bar_plus" android:gravity="center"></bitmap>
+        <bitmap android:src="@drawable/ic_bar_plus" android:gravity="center_vertical|right"></bitmap>
     </item>
 </layer-list>
