--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -110,15 +110,31 @@
         <item name="android:textColor">@android:color/black</item>
     </style>
 
+    <style name="thrice_extra_large_font" parent="android:Widget.TextView">
+        <item name="android:textSize">@dimen/thrice_extra_large_font</item>
+    </style>
+
+    <style name="thrice_extra_large_font.colorPrimary" parent="@style/thrice_extra_large_font">
+        <item name="android:textColor">@color/colorPrimary</item>
+    </style>
+
+    <style name="thrice_extra_large_font.bold.colorPrimary" parent="@style/thrice_extra_large_font">
+        <item name="android:textColor">@color/colorPrimary</item>
+        <item name="android:textStyle">bold</item>
+    </style>
+
     <!-- Button -->
     <style name="buttonSmall" parent="android:Widget.Button">
         <item name="android:textColor">@color/white</item>
         <item name="android:background">@color/colorPrimary</item>
         <item name="android:textSize">@dimen/small_font</item>
-        <item name="android:paddingLeft">@dimen/double_extra_large_padding</item>
-        <item name="android:paddingRight">@dimen/double_extra_large_padding</item>
-        <item name="android:paddingTop">@dimen/regular_padding</item>
-        <item name="android:paddingBottom">@dimen/regular_padding</item>
+        <item name="android:width">@dimen/button_width</item>
+        <item name="android:height">@dimen/button_height</item>
+    </style>
+
+    <style name="buttonRegular.border" parent="@style/buttonSmall">
+        <item name="android:background">@drawable/button_border</item>
+        <item name="android:textSize">@dimen/regular_font</item>
     </style>
 
     <!--Spinner Style-->
