--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -86,7 +86,8 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         android:background="@drawable/sign_in_bg"
-        android:layout_marginEnd="90dp" />
+        android:layout_marginEnd="90dp"
+        android:visibility="gone"/>
 
 
     <com.an.customfontview.CustomEditText
@@ -105,7 +106,8 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         android:layout_marginStart="90dp"
-        android:id="@+id/txt_password"/>
+        android:id="@+id/txt_password"
+        android:visibility="gone"/>
 
     <com.an.customfontview.CustomTextView
         android:layout_width="wrap_content"
@@ -142,30 +144,25 @@
         app:layout_constraintRight_toRightOf="parent"
         android:layout_marginLeft="8dp"
         app:layout_constraintLeft_toLeftOf="parent"
-        android:orientation="horizontal"
+        android:orientation="vertical"
         android:layout_marginTop="@dimen/regular_padding">
         <Button
             android:id="@+id/btn_fb_login"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:layout_gravity="center_horizontal"
-            android:background="@drawable/facebook_button"
-
-            />
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/signin_with_facebook"/>
         <Button
             android:id="@+id/btn_ins_login"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:layout_gravity="center_horizontal"
-            android:background="@drawable/instagram_button"
-            android:layout_marginStart="10dp" />
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/signin_with_instagram"
+            android:layout_marginTop="10dp" />
         <Button
             android:id="@+id/btn_twi_login"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:layout_gravity="center_horizontal"
-            android:background="@drawable/twitter_button"
-            android:layout_marginStart="10dp" />
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/signin_with_twitter"
+            android:layout_marginTop="10dp" />
     </LinearLayout>
 
     <View
