--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -15,7 +15,8 @@
         android:layout_height="wrap_content"
         android:src="@drawable/icon_app"
         app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_marginLeft="@dimen/very_large_padding"/>
+        android:layout_marginLeft="@dimen/very_large_padding"
+        android:visibility="gone"/>
 
     <com.an.customfontview.CustomTextView
         android:id="@+id/textViewMostrecents"
@@ -25,7 +26,8 @@
         style="@style/regularFont.black"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageViewIconApp"
-        android:layout_marginLeft="@dimen/very_large_padding"/>
+        android:layout_marginLeft="@dimen/very_large_padding"
+        android:visibility="gone"/>
     <ImageView
         android:id="@+id/imageViewDownArrow"
         android:layout_width="wrap_content"
@@ -34,7 +36,8 @@
         app:layout_constraintLeft_toRightOf="@+id/textViewMostrecents"
         app:layout_constraintTop_toBottomOf="@+id/imageViewIconApp"
         app:layout_constraintTop_toTopOf="@+id/textViewMostrecents"
-        app:layout_constraintBottom_toBottomOf="@+id/textViewMostrecents"/>
+        app:layout_constraintBottom_toBottomOf="@+id/textViewMostrecents"
+        android:visibility="gone"/>
 
     <FrameLayout
         android:id="@+id/relativeLayoutMonth"
@@ -44,7 +47,8 @@
         android:background="@drawable/shape_month_bg"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageViewIconApp"
-        android:layout_marginRight="@dimen/very_large_padding">
+        android:layout_marginRight="@dimen/very_large_padding"
+        android:visibility="gone">
         <Spinner
             android:id="@+id/spinnerMonth"
             android:layout_width="wrap_content"
@@ -79,7 +83,8 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         android:layout_marginRight="@dimen/very_large_padding"
-        android:layout_marginTop="@dimen/large_padding"/>
+        android:layout_marginTop="@dimen/large_padding"
+        android:visibility="gone"/>
     <com.an.customfontview.CustomTextView
         android:id="@+id/customTextViewByName"
         android:layout_width="wrap_content"
@@ -122,7 +127,8 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginBottom="@dimen/regular_padding"/>
+        android:layout_marginBottom="@dimen/regular_padding"
+        android:visibility="gone"/>
 
 
 
