--- a/app/src/main/res/layout/content_settings.xml
+++ b/app/src/main/res/layout/content_settings.xml
@@ -64,7 +64,8 @@
         app:layout_constraintRight_toRightOf="parent"
         android:layout_marginTop="@dimen/large_padding"
         android:layout_marginLeft="@dimen/large_padding"
-        android:layout_marginRight="@dimen/large_padding"/>
+        android:layout_marginRight="@dimen/large_padding"
+        android:visibility="gone"/>
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recyclerViewSettings"
