--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -119,6 +119,16 @@
         android:scrollbars="vertical"
         ></android.support.v7.widget.RecyclerView>
 
+    <TextView
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintTop_toBottomOf="@+id/customTextViewByName"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/imageViewPlus"
+        android:id="@+id/textViewEmptyResult"
+        android:layout_gravity="center"/>
+
     <ImageView
         android:id="@+id/imageViewPlus"
         android:layout_width="wrap_content"
