--- a/app/src/main/res/layout/content_video.xml
+++ b/app/src/main/res/layout/content_video.xml
@@ -55,6 +55,16 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"/>
 
+    <ImageView
+        android:id="@+id/imageViewFrontCamera"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/ic_camera_switch"
+        android:layout_marginBottom="@dimen/large_padding"
+        android:layout_marginRight="@dimen/large_padding"
+        app:layout_constraintBottom_toTopOf="@+id/viewBottomBar"
+        app:layout_constraintRight_toRightOf="parent"/>
+
     <View
         android:id="@+id/viewBottomBar"
         android:layout_width="wrap_content"
