--- a/app/src/main/res/layout/video_save_confirmation_dialog.xml
+++ b/app/src/main/res/layout/video_save_confirmation_dialog.xml
@@ -1,17 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
+<FrameLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:background="@null">
+    android:layout_height="match_parent"
+    android:background="@android:color/transparent">
 
-    <View
+    <LinearLayout
         android:id="@+id/viewVideoConfirmation"
-        android:layout_width="@dimen/dialog_width"
-        android:layout_height="@dimen/dialog_height"
-        android:background="@drawable/video_save_confirmation_bg"></View>
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@drawable/video_save_confirmation_bg"
+        android:layout_gravity="center_vertical"
+        android:minWidth="@dimen/huge_extra_large_padding"
+        android:orientation="vertical">
 
 
 
@@ -24,34 +25,43 @@
         android:drawableRight="@drawable/ic_down_arrow_white"
         android:paddingRight="@dimen/regular_padding"
         android:drawablePadding="@dimen/regular_padding"
-        app:layout_constraintLeft_toLeftOf="@+id/viewVideoConfirmation"
-        app:layout_constraintRight_toRightOf="@+id/viewVideoConfirmation"
-        app:layout_constraintTop_toTopOf="@+id/viewVideoConfirmation"
-        android:layout_marginTop="@dimen/regular_padding"/>
+        android:layout_marginTop="@dimen/regular_padding"
+        android:layout_gravity="center"
+        />
 
-    <com.an.customfontview.CustomButton
-        android:id="@+id/customButtonCancel"
-        android:layout_width="wrap_content"
+    <RelativeLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/cancel"
-        style="@style/buttonRegular.border"
-        app:layout_constraintTop_toBottomOf="@+id/customTextViewTitle"
-        app:layout_constraintLeft_toLeftOf="@+id/viewVideoConfirmation"
-        app:layout_constraintRight_toRightOf="@+id/viewVideoConfirmation"
-        app:layout_constraintHorizontal_bias="0.1"
-        android:layout_marginTop="@dimen/regular_padding"/>
+        android:id="@+id/layoutButton"
+        android:layout_marginTop="@dimen/regular_padding">
+        <com.an.customfontview.CustomButton
+            android:id="@+id/customButtonCancel"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/cancel"
+            style="@style/buttonRegular.border"
+            android:layout_marginLeft="@dimen/regular_padding"
+            android:layout_alignParentLeft="true"
+            android:minWidth="@dimen/extra_large_padding"
+            android:layout_toLeftOf="@+id/viewCenter"/>
 
-    <com.an.customfontview.CustomButton
-        android:id="@+id/customButtonOK"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/ok"
-        style="@style/buttonRegular.border"
-        app:layout_constraintTop_toBottomOf="@+id/customTextViewTitle"
-        app:layout_constraintLeft_toLeftOf="@+id/viewVideoConfirmation"
-        app:layout_constraintRight_toRightOf="@+id/viewVideoConfirmation"
-        app:layout_constraintHorizontal_bias="0.9"
-        android:layout_marginTop="@dimen/regular_padding"/>
+        <View
+            android:layout_width="@dimen/regular_padding"
+            android:layout_height="@dimen/regular_padding"
+            android:id="@+id/viewCenter"
+            android:layout_centerHorizontal="true"></View>
+
+        <com.an.customfontview.CustomButton
+            android:id="@+id/customButtonOK"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/ok"
+            style="@style/buttonRegular.border"
+            android:layout_marginRight="@dimen/regular_padding"
+            android:layout_alignParentRight="true"
+            android:minWidth="@dimen/extra_large_padding"
+            android:layout_toRightOf="@+id/viewCenter"/>
+    </RelativeLayout>
 
     <com.an.customfontview.CustomTextView
         android:id="@+id/customTextViewNote"
@@ -59,13 +69,11 @@
         android:layout_height="wrap_content"
         android:text="@string/save_confirmation_note"
         style="@style/smallFont.white"
-        app:layout_constraintLeft_toLeftOf="@+id/viewVideoConfirmation"
-        app:layout_constraintRight_toRightOf="@+id/viewVideoConfirmation"
-        app:layout_constraintTop_toBottomOf="@+id/customButtonOK"
-        android:layout_marginTop="@dimen/regular_padding"/>
+        android:layout_marginTop="@dimen/regular_padding"
+        android:layout_gravity="center"/>
 
 
+    </LinearLayout>
 
 
-
-</android.support.constraint.ConstraintLayout>
+</FrameLayout>
