charity preference has to allow select one charity…; notification option has to be clickable CheckBoxPreference  can be used , value min request is the default value and should be changeable .. balance size font is not accurate .. value of valance has to be dynamic..more options removed… recent request removed too

--- a/app/src/main/res/layout/content_settings.xml
+++ b/app/src/main/res/layout/content_settings.xml
@@ -85,7 +85,8 @@
         android:id="@+id/frameLayoutRecentRequests"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent">
+        app:layout_constraintRight_toRightOf="parent"
+        android:visibility="gone">
         <include
             layout="@layout/content_recent_requests"/>
     </FrameLayout>
