--- a/app/src/main/res/layout/item_group_settings.xml
+++ b/app/src/main/res/layout/item_group_settings.xml
@@ -42,16 +42,30 @@
         android:src="@drawable/menu_notification"
         android:layout_centerVertical="true"
         android:layout_toLeftOf="@+id/imageViewMenuArrow"
-        android:layout_marginRight="@dimen/regular_padding"/>
-    <com.an.customfontview.CustomTextView
+        android:layout_marginRight="@dimen/regular_padding"
+        android:visibility="gone"/>
+    <CheckBox
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/customTextViewMenuNotification"
+        android:id="@+id/checkboxMenuNotification"
+        android:layout_centerVertical="true"
+        android:layout_toLeftOf="@+id/imageViewMenuArrow"
+        android:layout_marginRight="@dimen/regular_padding"
+        android:button="@drawable/checkbox_on_off"/>
+    <com.an.customfontview.CustomEditText
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/textMenuNotification"
         android:layout_centerVertical="true"
         android:layout_toLeftOf="@+id/imageViewMenuArrow"
         android:layout_marginRight="@dimen/regular_padding"
         android:text="$75"
-        style="@style/largeFont.white"/>
+        style="@style/largeFont.white"
+        android:ems="3"
+        android:maxLines="1"
+        android:digits="1234567890$"
+        android:maxLength="4"
+        android:textSize="@dimen/regular_font"/>
 
     <ImageView
         android:id="@+id/imageViewMenuArrow"
