3.  a.can we move the name of the requester  to the white section in the bottom and add also the message … b. can the video be saved in gallery of phone? c. can we remove the white square shown in the camera screen ? d. the plus symbol in the right corner should allow to open a video from gallery and be ready to send to server

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -120,6 +120,12 @@
         <item name="android:textColor">@color/colorPrimary</item>
     </style>
 
+    <style name="largeFont.bold.colorPrimary" parent="@style/largeFont">
+        <item name="android:textColor">@color/colorPrimary</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:textSize">@dimen/extra_large_font</item>
+    </style>
+
     <style name="thrice_extra_large_font" parent="android:Widget.TextView">
         <item name="android:textSize">@dimen/thrice_extra_large_font</item>
     </style>
