button record is not in screen .. some error in different screen sizes

--- a/app/src/main/res/layout/content_video.xml
+++ b/app/src/main/res/layout/content_video.xml
@@ -45,7 +45,7 @@
         app:layout_constraintBottom_toTopOf="@+id/viewBottomBar"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        android:visibility="invisible"/>
+        android:visibility="visible"/>
 
     <ImageView
         android:id="@+id/imageViewFrontCamera"
